# dynamass

./: README.md  pyproject.toml
dynamass/: __init__.py  integrate.py  paths.py  plotting.py  stability.py  system.py  targets.py
paper/: SUBMIT.md  draft.md  expansion_results_log.md  ms.tex  ms_mnras.tex  note_catalog_artifacts.md  note_catalog_artifacts.tex  resonant_flags_validation.md  table1_dispositions.csv  table2_planet_limits.csv
results/: 47_uma_runs.csv  47_uma_runs_1myr.csv  astrometry_validation.csv  combined_catalog.csv  gj_876_validation_runs.csv  hd_12661_runs.csv  hd_45364_validation_runs.csv  mutinc_limits.csv  mutual_inc.csv  pma_validation.csv  resonant_catalog.csv  resonant_catalog_1e6.csv  resonant_status.csv  sensitivity.csv  survey_catalog.csv  survey_catalog_1e6.csv  survey_catalog_1e6_prod.csv  survey_catalog_1e6_v1.csv  survey_catalog_1e7_prod.csv  survey_catalog_prod.csv  survey_catalog_v1.csv  targets.csv  weak_spotcheck.csv
results/resonant/: 24_sex_runs.csv  2mass_j19383260+4603591_runs.csv  bd+20_2457_runs.csv  bd-210397_runs.csv  dmpp-2_runs.csv  gam_lib_runs.csv  hd_113538_runs.csv  hd_114386_runs.csv  hd_155358_runs.csv  (+12 more)
scripts/: cdf_figure.py  combine_catalogs.py  compare_depths.py  diag_barnard.py  diag_gj876.py  make_table1.py  make_table2.py  note_figure.py  rank_targets.py  run_demo.py  run_depth_extension.py  run_e0_branch.py  run_mutinc_limits.py  run_mutual_inc.py  run_resonant.py  run_survey.py  sensitivity.py  spotcheck_weak.py  validate_anchor2.py  validate_astrometry.py  validate_gj876.py  validate_pma.py
(+372 files in other folders)
