[project]
name = "dynamass"
version = "0.1.0"
description = "Dynamical stability constraints on the true masses of non-transiting RV exoplanets"
requires-python = ">=3.11"
dependencies = [
    "rebound>=4",
    "numpy",
    "pandas",
    "matplotlib",
    "requests",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dynamass"]
